# sw-crew

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.agent  LICENSE  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
src/crew/: __init__.py  config.py  context.py  logging.py  notifications.py  resilience.py  sandbox.py
src/crew/agents/: analyst.py  architect.py  base.py  coder.py  debugger.py  deployer.py  docwriter.py  orchestrator.py  planner.py  reviewer.py  run_single.py  tester.py
src/crew/cli/: main.py
src/crew/gateway/: app.py  auth.py
src/crew/gateway/routes/: gates.py  health.py  metrics.py  stream.py  tasks.py
src/crew/tools/: files.py  git.py  search.py  shell.py
tests/: conftest.py  test_config.py  test_db.py  test_gateway.py  test_phase2.py  test_phase3.py  test_phase4.py  test_tools.py
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css
web/src/pages/: Approvals.tsx  Dashboard.tsx  Health.tsx  History.tsx  Submit.tsx  TaskDetail.tsx
